objects/DMAPP__DM_Setting__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for storing some global settings used by Dealmaker in the Org and is accessible from the various Admin Apps.</description>
    <fields>
        <fullName>DMAPP__AllowSalesProcessPopup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Playbook Sales Process to be selected/changed on the page</description>
        <label>AllowSalesProcessPopup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Chatter_Snooze__c</fullName>
        <defaultValue>30.0</defaultValue>
        <inlineHelpText>Surpress update messages for Dealmaker pages for these amount of minutes</inlineHelpText>
        <label>Chatter Snooze</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Scorecard_Batch_Job_Id__c</fullName>
        <label>Scorecard Batch Job Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Send_Usage_Batch_Job_Id__c</fullName>
        <label>Send Usage Batch Job Id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Update_Opportunity_CloseDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Opportunity CloseDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Update_Opportunity_Probability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Opportunity Probability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Update_Opportunity_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Opportunity Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_Process_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Process Mapping</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealmaker Settings</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Settings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>